# chordii-debian

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  chordii.spec  chordii.spec.in  configure  configure.ac
debian/: README.source  changelog  control  copyright  manpages  repack.sh  rules  watch
debian/patches/: fix-manpage.patch  fix-spelling-error.patch  remove-surplus-man-mans-rule.diff  series
man/: Makefile.am  Makefile.in  a2crd.1  chordii.1
src/: Makefile.am  Makefile.in  a2crd.c  chordii.c  chordii.h  common.c  config.h.in  getopt.c  grid.c  iso.c  toc.c  xpose.c
windows/: config.h  config.h.in  makefile
